# calculator

./: Cargo.toml
assets/: tailwind.css
src/: main.rs
