[package]
name = "calculator"
version = "0.1.0"
authors = ["Abraham-ch <abraham.chafloque.a@uni.pe>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = [] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
